# konoha-agentic-academy

./: .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  konoha.config.example.json  pyproject.toml
adapters/: README.md
alliance/: README.md
clans/: README.md
config/: konoha_v4_capabilities.json
council/: kage_summit_policy.md
docs/: narrative.md  roadmap.md
evals/: README.md
examples/: README.md  conversational_real_audit_mission.txt
hokage/: orchestration_policy.md
jounin/: reviewer_policy.md
kagebunshin/: worker_policy.md
marketplace/: README.md
missions/: README.md
runtime/: README.md
sandbox/: README.md
scripts/: install.sh
scrolls/: README.md  adapter_contract_review_scroll.md  adapter_dry_run_review_scroll.md  adapter_evidence_review_scroll.md  adapter_execution_gate_review_scroll.md  adapter_invocation_gate_review_scroll.md  adapter_invocation_review_scroll.md  adapter_permission_review_scroll.md  adapter_review_scroll.md  adapter_runtime_boundary_review_scroll.md  apply_plan_review_scroll.md  artifact_writer_review_scroll.md  asset_resolver_review_scroll.md  canonical_release_test_gate_review_scroll.md  changelog_maintenance_scroll.md  code_change_scroll.md  code_review_scroll.md  command_runner_boundary_review_scroll.md  context_budget_review_scroll.md  context_capsule_lifecycle_review_scroll.md  controlled_tool_execution_review_scroll.md  dependency_review_scroll.md  doctrine_update_scroll.md  documentation_review_scroll.md  error_triage_scroll.md  (+92 more)
(+762 files in other folders)
